<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myColor"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfirstapp.MainActivity" >

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/Button1"
        android:layout_weight="1"
        android:hint="@string/edit_message" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_message"
        android:layout_below="@+id/Button1"
        android:layout_marginTop="18dp"
        android:ems="10" 
        android:hint="@string/edit_distance">

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/ConversionOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_distance"
        android:layout_below="@+id/edit_distance"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="44dp" >
    </RadioGroup>

    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ConversionOptions"
        android:text="@string/miles" />

    <RadioButton
        android:id="@+id/radio0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_distance"
        android:layout_below="@+id/edit_distance"
        android:layout_marginTop="19dp"
        android:checked="true"
        android:text="@string/kmh" />

    <Button
        android:id="@+id/Convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radio1"
        android:layout_below="@+id/radio1"
        android:layout_marginTop="23dp"
        android:onClick="calculateDistance"
        android:text="@string/calc" />

</RelativeLayout>
